# CMake-Learning

./: README.md
CMake编译以及安装/: CMakeLists.txt  COPYRIGHT
CMake编译以及安装/src/: CMakeLists.txt  hello.cpp
CMake静态库和动态库/: CMakeLists.txt
CMake静态库和动态库/lib/: CMakeLists.txt  hello.cpp
使用外部共享库和头文件/: CMakeLists.txt  main.cpp
