SET (LIBHELLO_SRC hello.cpp)
ADD_LIBRARY (hello_static STATIC ${LIBHELLO_SRC})  # hello代表库名，生成的文件名：libhello.a静态库


SET_TARGET_PROPERTIES (hello_static PROPERTIES  OUTPUT_NAME "hello")

# SET_TARGET_PROPERTIES (hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY (hello SHARED ${LIBHELLO_SRC})  # 动态库添加

# SET_TARGET_PROPERTIES (hello PROPERTIES  OUTPUT_NAME "hello")
# SET_TARGET_PROPERTIES (hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 2.0.1 SOVERSION 2)   # 设置版本号信息

INSTALL(FILES hello.h DESTINATION include/hello)

# ARCHIVE特指静态库，LIBRARY特指动态库，RUNTIME特指可执行目标二进制
INSTALL(TARGETS hello hello_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
LINK_DIRECTORIES(DESTINATION lib)